@@ -47,7 +47,7 @@
             "Scalar::Util" : "0",
             "URI" : "1.69",
             "URI::QueryParam" : "1.69",
-            "URI::file" : "4.21",
+            "URI::db" : "0.15",
             "perl" : "5.010001"
          }
       },
